just changed styling
changed styling.

--- a/style.css
+++ b/style.css
@@ -1,21 +1,78 @@
 /* entire's body styling. set margins paddings, background etc. */
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
+}
+body {
+    width: 100vw;
+}
+/* container - cennters all content within container */
+.container {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    /* align items vertically - centered */
+    align-items: center;
+    /* justyfying content horizontally - centered */
+    justify-content: center;
 }
 #first-div {
     background-color: rgb(39, 132, 110);
 }
+#second-div {
+    background-color: rgb(87, 56, 15);
+}
+#third-div {
+    background-color: black;
+}
+#forth-div {
+    background-color: blue;
+}
 #rounded-img {
-    border: 3px solid rgb(116, 25, 25);
-    /* why the border-radius doesn't work :( */
+    border: 5px solid rgb(116, 25, 25);
+    border-radius: 50%;
+}
+img {
+    width: 50%;
+    height:f 50%;
 }
 /* divs shared background */
-.green-bg {
+/* .green-bg {
     background-color: rgb(11, 65, 27);
+} */
+
+ /* animation class and keyframe */
+@keyframes makesquare {
+    0% {
+        top: 0px; left: 0px;
+    }
+    20% {
+        top: 500px;
+        left: 0px;
+    }
+    40% {
+        top: 500px;
+        left: 500px;
+    }
+    100% {
+        top: 0px;
+        left: 500px
+    }
 }
+#m-kitty {
+    width: 35%;
+    height: 35%;
+    position: absolute;
+    animation: makesquare 5s infinite;
+    border: 5px solid rgb(48, 146, 199);
+    border-radius: 50%;
+}
+
 h1 {
     font-size: 50px; color: rgb(38, 17, 96);
+}
+h3 {
+    color: rgb(225, 112, 112);
 }
