--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 /* container - cennters all content within container */
 .container {
     width: 100%;
-    height: 400px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     /* align items vertically - centered */
@@ -35,8 +35,11 @@ body {
     border-radius: 50%;
 }
 img {
-    width: 50%;
-    height:f 50%;
+    width: 30%;
+    height: 70%;
+}
+p {
+    margin: 20px 0;
 }
 /* divs shared background */
 /* .green-bg {
@@ -75,4 +78,17 @@ h1 {
 }
 h3 {
     color: rgb(225, 112, 112);
+}
+
+/* navigation style */
+nav {
+    background-color: rgb(56, 50, 50);
+}
+/* nav ul selects any ul that is inside a nav */
+nav ul {
+    list-style-type: none;
+    display: flex;
+    padding: 20px;
+    border-width: 2px;
+    margin: 2px;
 }
