--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* for the nice background (I wanna use it somewhere)
+
+background: linear-gradient(to right, rgb(0, 0, 0), rgba(0, 0, 0, 0.436)); 
+*/
+
 /* entire's body styling. set margins paddings, background etc. */
 * {
     margin: 0 auto;
@@ -7,27 +12,20 @@
 body {
     width: 100vw;
 }
-
-/* resizing content - mobile first content/ breakpoints
- /* Extra small devices (phones, 600px and down) */
- @media only screen and (max-width: 600px) {}
-
- /* Small devices (portrait tablets and large phones, 600px and up) */
- @media only screen and (min-width: 600px) {}
- 
- /* Medium devices (landscape tablets, 768px and up) */
- @media only screen and (min-width: 768px) {}
- 
- /* Large devices (laptops/desktops, 992px and up) */
- @media only screen and (min-width: 992px) {}
- 
- /* Extra large devices (large laptops and desktops, 1200px and up) */
- @media only screen and (min-width: 1200px) {} 
+h1 {
+    margin-top: 84px;
+    padding: 35px 20px;
+}
+/* red triangles */
+#background {
+    width: 100%;
+    /* margin-top: -300px; */
+    position: absolute;
+}
 
 /* container - cennters all content within container */
 .container {
     width: 100%;
-    height: 500px;
     display: flex;
     flex-direction: column;
     /* align items vertically - centered */
@@ -38,6 +36,7 @@ body {
 }
 #first-div {
     background-color: rgb(39, 132, 110);
+    position: relative;
 }
 #second-div {
     background-color: rgb(87, 56, 15);
@@ -49,42 +48,49 @@ body {
     background-color: blue;
     position: relative;
 }
+#forth-div-extension h3{
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 60px;
+}
 #rounded-img {
     border: 5px solid rgb(116, 25, 25);
     border-radius: 50%;
 }
 
 img {
-    width: 30%;
-    height: 70%;
+    object-fit: cover;
+    margin-bottom: 2vw;
+    width: 50%;
+    height: 45vw;
 }
 p {
-    margin: 20px 0;
+    margin: 20px 8px;
 }
 
- /* animation class and keyframe */
+ /* animation class and keyframe. Animation for #m-kitty is set for screens above 768px*/
 @keyframes makesquare {
     0% {
         top: 0px; left: 0px;
     }
     20% {
-        top: 500px;
+        top: 150px;
         left: 0px;
     }
     40% {
-        top: 500px;
-        left: 500px;
+        top: 150px;
+        left: 150px;
     }
     100% {
         top: 0px;
-        left: 500px
+        left: 150px
     }
 }
 #m-kitty {
-    width: 35%;
-    height: 35%;
-    position: absolute;
-    animation: makesquare 5s infinite;
+    position: relative;
     border: 5px solid rgb(48, 146, 199);
     border-radius: 50%;
 }
@@ -93,7 +99,7 @@ h1 {
     font-size: 50px; color: rgb(38, 17, 96);
 }
 h3 {
-    color: rgb(225, 112, 112);
+    color: red;
 }
 
 /* navigation style */
@@ -101,6 +107,8 @@ h3 {
     height: 40px;
 }
 nav {
+    /* z-index puts a selected element always on the top so position absolute can't appear on the to anymore */
+    z-index: 4; 
     background-color: rgb(56, 50, 50);
     position: fixed;
     width: 100vw;
@@ -125,5 +133,67 @@ a {
     margin: 10px;
     border: 2px solid white;
     border-radius: 5px;
+}
 
+/* resizing content - mobile first content/ breakpoints
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {
+    .container{
+        height: 350px;
+    }
+    #forth-div-extension h3 {
+        position: relative;
+        margin-top: -50px;
+        font-size: 3rem;
+    }
+    h1 {
+        margin-top: -100px;
+        padding: 8px;
+    }
+ }
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+    #forth-div-extension h3 {
+        position: relative;
+        font-size: 2.8rem;
+    }
+    .container {
+        padding-top: 8px;
+    }
+ }
+ 
+ /* Medium devices (landscape tablets, 768px and up) */
+ @media only screen and (min-width: 768px) {
+    .container{
+        width: 100%;
+        height: auto ;
+        padding: 20px 8px;
+    }
+    #m-kitty {
+        animation: makesquare 5s infinite;
+        z-index: 4;
+    }
+    #forth-div-extension h3 {
+        position: relative;
+        font-size: 2.8rem;
+    }
+ }
+ 
+ /* Large devices (laptops/desktops, 992px and up) */
+ @media only screen and (min-width: 992px) {
+ }
+ /* Extra large devices (large laptops and desktops, 1200px and up) */
+ @media only screen and (min-width: 1200px) {
+    img {
+        width: 50%;
+        height: 45vw;
+    }
+}
+
+/* second page styling */
+
+#meow {
+    border: 5px solid rgb(63, 20, 20);
+    border-radius: 10px;
 }
